ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /app-a
            pathType: Prefix
            backend:
              service:
                name: app-a-service
                port:
                  number: 80

          - path: /app-b
            pathType: Prefix
            backend:
              service:
                name: app-b-service
                port:
                  number: 80
